// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row /> should render correctly active field 1`] = `
<table>
  <tbody>
    <tr
      class="row draggable row"
      data-handler-id="T0"
      style="opacity: 1;"
    >
      <td
        class="wrapper align-middle bodyCell normal"
      >
        <div
          class="cellContent"
        >
          <div
            class="material-icons text-faded dragIndicator dragIndicatorActive"
            draggable="true"
          >
            drag_indicator
          </div>
        </div>
      </td>
      <td
        class="link-full-td align-middle"
        id="ticket-field-label-123"
      >
        <a
          to="/app/settings/ticket-fields/123/edit"
        >
          <div>
            <span
              class="mr-2 label"
            >
              Input field
            </span>
          </div>
        </a>
      </td>
      <td
        class="link-full-td align-middle smallest pr-4"
      />
      <td
        class="link-full-td align-middle smallest pr-4"
      >
        <div
          class="text-faded"
        >
          <div>
            2022-01-02T03:04:05.123456+00:00
          </div>
        </div>
      </td>
      <td
        class="align-middle smallest actions"
      >
        <button
          class="wrapper actionButton mr-1 wrapper ghost ghost secondary medium"
          id="archive-ticket-field-123"
          title="Archive"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            archive
          </i>
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Row /> should render correctly active field 2`] = `
<table>
  <tbody>
    <tr
      class="row draggable row"
      data-handler-id="T2"
      style="opacity: 1;"
    >
      <td
        class="link-full-td align-middle"
        id="ticket-field-label-123"
      >
        <a
          to="/app/settings/ticket-fields/123/edit"
        >
          <div>
            <span
              class="mr-2 label"
            >
              Input field
            </span>
          </div>
        </a>
      </td>
      <td
        class="link-full-td align-middle smallest pr-4"
      />
      <td
        class="link-full-td align-middle smallest pr-4"
      >
        <div
          class="text-faded"
        >
          <div>
            2022-01-02T03:04:05.123456+00:00
          </div>
        </div>
      </td>
      <td
        class="align-middle smallest actions"
      >
        <button
          class="wrapper actionButton mr-1 wrapper ghost ghost secondary medium"
          id="archive-ticket-field-123"
          title="Archive"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            archive
          </i>
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Row /> should render correctly active required field 1`] = `
<table>
  <tbody>
    <tr
      class="row draggable row"
      data-handler-id="T4"
      style="opacity: 1;"
    >
      <td
        class="wrapper align-middle bodyCell normal"
      >
        <div
          class="cellContent"
        >
          <div
            class="material-icons text-faded dragIndicator dragIndicatorActive"
            draggable="true"
          >
            drag_indicator
          </div>
        </div>
      </td>
      <td
        class="link-full-td align-middle"
        id="ticket-field-label-123"
      >
        <a
          to="/app/settings/ticket-fields/123/edit"
        >
          <div>
            <span
              class="mr-2 label"
            >
              Input field
            </span>
          </div>
        </a>
      </td>
      <td
        class="link-full-td align-middle smallest pr-4"
      >
        <div
          class="badge"
        >
          REQUIRED
        </div>
      </td>
      <td
        class="link-full-td align-middle smallest pr-4"
      >
        <div
          class="text-faded"
        >
          <div>
            2022-01-02T03:04:05.123456+00:00
          </div>
        </div>
      </td>
      <td
        class="align-middle smallest actions"
      >
        <button
          class="wrapper actionButton mr-1 wrapper ghost ghost secondary medium"
          id="archive-ticket-field-123"
          title="Archive"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            archive
          </i>
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Row /> should render correctly active required field 2`] = `
<table>
  <tbody>
    <tr
      class="row draggable row"
      data-handler-id="T6"
      style="opacity: 1;"
    >
      <td
        class="link-full-td align-middle"
        id="ticket-field-label-123"
      >
        <a
          to="/app/settings/ticket-fields/123/edit"
        >
          <div>
            <span
              class="mr-2 label"
            >
              Input field
            </span>
          </div>
        </a>
      </td>
      <td
        class="link-full-td align-middle smallest pr-4"
      >
        <div
          class="badge"
        >
          REQUIRED
        </div>
      </td>
      <td
        class="link-full-td align-middle smallest pr-4"
      >
        <div
          class="text-faded"
        >
          <div>
            2022-01-02T03:04:05.123456+00:00
          </div>
        </div>
      </td>
      <td
        class="align-middle smallest actions"
      >
        <button
          class="wrapper actionButton mr-1 wrapper ghost ghost secondary medium"
          id="archive-ticket-field-123"
          title="Archive"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            archive
          </i>
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Row /> should render correctly archived required field 1`] = `
<table>
  <tbody>
    <tr
      class="row draggable row"
      data-handler-id="T8"
      style="opacity: 1;"
    >
      <td
        class="link-full-td align-middle"
        id="ticket-field-label-123"
      >
        <a
          to="/app/settings/ticket-fields/123/edit"
        >
          <div>
            <span
              class="mr-2 label"
            >
              Input field
            </span>
          </div>
        </a>
      </td>
      <td
        class="link-full-td align-middle smallest pr-4"
      />
      <td
        class="link-full-td align-middle smallest pr-4"
      >
        <div
          class="text-faded"
        >
          <div>
            2022-01-02T03:04:05.123456+00:00
          </div>
        </div>
      </td>
      <td
        class="align-middle smallest actions"
      >
        <button
          class="wrapper actionButton mr-1 wrapper ghost ghost secondary medium"
          id="restore-ticket-field-123"
          title="Unarchive"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            unarchive
          </i>
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Row /> should render correctly archived required field 2`] = `
<table>
  <tbody>
    <tr
      class="row draggable row"
      data-handler-id="T10"
      style="opacity: 1;"
    >
      <td
        class="link-full-td align-middle"
        id="ticket-field-label-123"
      >
        <a
          to="/app/settings/ticket-fields/123/edit"
        >
          <div>
            <span
              class="mr-2 label"
            >
              Input field
            </span>
          </div>
        </a>
      </td>
      <td
        class="link-full-td align-middle smallest pr-4"
      />
      <td
        class="link-full-td align-middle smallest pr-4"
      >
        <div
          class="text-faded"
        >
          <div>
            2022-01-02T03:04:05.123456+00:00
          </div>
        </div>
      </td>
      <td
        class="align-middle smallest actions"
      >
        <button
          class="wrapper actionButton mr-1 wrapper ghost ghost secondary medium"
          id="restore-ticket-field-123"
          title="Unarchive"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            unarchive
          </i>
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;
